[build-system]
requires = [
    "setuptools>=80",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
exclude = ["tests_*"]

[tool.ruff.lint]
extend-select = [
    "W",
    "I",
    "PL",
    "ARG",
    "BLE",
]
ignore = [
    "ARG001",
    "ARG002",

    # pylint: global-statement
    "PLW0603",

    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR2004"
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
forced-separate = ["tests"]
