[build-system]
requires = ["setuptools>=80", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycognito"
dynamic = ["version"]          # version comes from git tags via setuptools-scm
description = "Python library for Amazon Cognito (fork of pvizeli/pycognito)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Kieren Eaton", email = "circuloned@gmail.com" },
]
maintainers = [
    { name = "Kieren Eaton", email = "circuloned@gmail.com" },
]
keywords = ["cognito", "aws", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
]

# Runtime dependencies only — no test/dev tools here
dependencies = [
    "boto3>=1.40.7",
    "pendulum>=3.0",
    "requests>=2.28",
    "pyjwt[crypto]>=2.8.0",
]

[project.urls]
Homepage           = "https://github.com/circulon/pycognito"
Repository         = "https://github.com/circulon/pycognito"
"Bug Tracker"      = "https://github.com/circulon/pycognito/issues"
"Original Project" = "https://github.com/pvizeli/pycognito"

[project.optional-dependencies]
dev = [
    "pycognito[test]",
    "ruff>=0.4",
    "pre-commit",
]
test = [
    "botocore>=1.40.7",
    "pytest>=8",
    "coverage>=7.10",
    "moto[cognitoidp]>=5",
    "requests-mock>=1.11",
    "envs>=1.3",
]

# ---------------------------------------------------------------------------
# Version sourced exclusively from git tags — no manual bumping needed.
# Tag a release:  git tag v1.2.3 && git push --tags
# ---------------------------------------------------------------------------
[tool.setuptools_scm]
write_to = "src/pycognito/_version.py"

[tool.setuptools.packages.find]
where = ["pycognito"]

[tool.ruff]
line-length = 88
exclude = ["tests_*"]

[tool.ruff.lint]
extend-select = ["W", "I", "PL", "ARG", "BLE"]
ignore = [
    "ARG001", "ARG002",
    "PLW0603",
    "PLR0904", "PLR0911", "PLR0912", "PLR0913",
    "PLR0914", "PLR0915", "PLR2004",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
forced-separate = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/pycognito"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
