[build-system]
requires = ["setuptools>=80", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycognito"
dynamic = ["version"]          # version comes from git tags via setuptools-scm
description = "Python library for Amazon Cognito (fork of pvizeli/pycognito)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Kieren Eaton", email = "circuloned@gmail.com" },
]
maintainers = [
    { name = "Kieren Eaton", email = "circuloned@gmail.com" },
]
keywords = ["cognito", "aws", "authentication"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "boto3>=1.40.7",
    "pendulum>=3.0",
    "requests>=2.28",
    "pyjwt[crypto]>=2.8.0",
]

[project.urls]
Homepage           = "https://github.com/circulon/pycognito"
Repository         = "https://github.com/circulon/pycognito"
"Bug Tracker"      = "https://github.com/circulon/pycognito/issues"
"Original Project" = "https://github.com/pvizeli/pycognito"

# ---------------------------------------------------------------------------
# Version sourced exclusively from git tags — no manual bumping needed.
# ---------------------------------------------------------------------------
[tool.setuptools_scm]
write_to = "src/pycognito/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
exclude = ["tests_*", "*/_version.py"]

[tool.ruff.lint]
extend-select = ["W", "I", "PL", "ARG", "BLE"]
ignore = [
    "ARG001", "ARG002",
    "PLW0603",
    "PLR0904", "PLR0911", "PLR0912", "PLR0913",
    "PLR0914", "PLR0915", "PLR2004",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
forced-separate = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/pycognito"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
